<resources>
    <string name="app_name">Triptalk</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="hi">Hi! Sing in now!</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sing_in_with_facebook">sing in with Facebook</string>
    <string name="connect_with_facebook">connect with Facebook</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="terms">Terms &amp; Condition</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="or">or</string>

    <string name="followers">Followers:</string>
    <string name="following">Following:</string>
    <string name="name">Name:</string>
    <string name="location">Location:</string>
    <string name="company">Company:</string>
    <string name="repositories">Repositories:</string>
    <string name="open_in_browser">Open in Browser</string>

    <string name="headset_unplugged">Headset unplugged</string>
    <string name="headset_plugged">Headset plugged</string>

    <string name="sort">Sort: </string>
    <string-array name="sort_types">
        <item>Without</item>
        <item>A-Z</item>
        <item>Z-A</item>
    </string-array>
</resources>
